# ccodebase

./: .clang-format  .gitignore  CMakeLists.txt  main.c
include/: codebase.h  core.h  math.h
include/ccodebase/: math.h
include/ccodebase/core/: defines.h  file.h  logging.h  string.h
include/ccodebase/math/: angle.h  constants.h  vec2.h
include/core/: ansi.h  logging.h  string.h
src/: codebase.c
src/core/: ansi.c  file.c  logging.c
src/math/: angle.c  vec2.c
